--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         This project was coded by
         <a href="https://github.com/Makanaka95" target="_blank">Marca</a> and is
         <a href="https://github.com/Makanaka95/My-project" target="_blank"> on GitHub</a> and
-        <a href="https://app.netlify.com/sites/incandescent-rugelach-830364/overview" target="_blank">hosted on Netlify</a>
+        <a href="https://incandescent-rugelach-830364.netlify.app/" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
     <script src="src/app.js"></script>
